--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "detect-browser": "^2.0.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "lodash.uniqueid": "^4.0.1",
+    "mapbox-gl": "^0.49.0-beta.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
