--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+// Title of the application. The title is e.g. display in the browser tab.
 REACT_APP_WEBSITE_TITLE = 'Hazard map'
+
+// Name of the data files. It is expected that the data files are located within ./public/
+REACT_APP_DATA_FLIGHT_ROUTES = 'data/flight-routes-dummy.json'
+REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/significant_week.geojson'
