--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "http-server": "^0.11.1",
+    "lodash.bind": "^4.2.1",
+    "lodash.isundefined": "^3.0.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "redux-mock-store": "^1.5.1"
@@ -41,14 +43,21 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "d3-dsv": "^1.0.10",
+    "d3-ease": "^1.0.5",
+    "d3-selection": "^1.3.2",
+    "d3-transition": "^1.1.3",
+    "deck.gl": "^6.1.0",
     "detect-browser": "^2.0.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "lodash.partial": "^4.2.1",
     "lodash.uniqueid": "^4.0.1",
     "mapbox-gl": "^0.49.0-beta.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-map-gl": "^3.3.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
