--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ REACT_APP_WEBSITE_TITLE = 'Hazard map'
 
 // Name of the data files. It is expected that the data files are located within ./public/
 REACT_APP_DATA_FLIGHT_ROUTES = 'data/flight-routes-dummy.json'
-REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/significant_week.geojson'
+REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/significant_month.geojson'
+REACT_APP_DATA_AIRPORTS = 'data/airports.csv'
