--- a/package.json
+++ b/package.json
@@ -41,19 +41,25 @@
     "redux-mock-store": "^1.5.1"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "d3-axis": "^1.0.12",
+    "d3-brush": "^1.0.6",
     "d3-dsv": "^1.0.10",
     "d3-ease": "^1.0.5",
+    "d3-scale": "^2.1.2",
     "d3-selection": "^1.3.2",
     "d3-transition": "^1.1.3",
     "deck.gl": "^6.1.0",
     "detect-browser": "^2.0.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "lodash.isnan": "^3.0.2",
     "lodash.partial": "^4.2.1",
     "lodash.uniqueid": "^4.0.1",
     "mapbox-gl": "^0.49.0-beta.1",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
