--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "detect-browser": "^2.0.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "ionicons": "^4.4.3",
+    "jquery": "^3.3.1",
     "lodash.has": "^4.5.2",
     "lodash.isnan": "^3.0.2",
     "lodash.partial": "^4.2.1",
