--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@
 node_modules/
 package-lock.json
 dist/
-public/data/
+public/data/flight-routes.csv
+public/data/flight-routes.json
+public/data/flight-routes-dummy.csv
+public/data/flight-routes-dummy.json
+build/
