--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lodash.has": "^4.5.2",
     "lodash.isnan": "^3.0.2",
     "lodash.partial": "^4.2.1",
+    "lodash.round": "^4.0.4",
     "lodash.uniqueid": "^4.0.1",
     "mapbox-gl": "^0.49.0-beta.1",
     "moment": "^2.22.2",
