--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ REACT_APP_WEBSITE_TITLE = 'Hazard map'
 //REACT_APP_DATA_FLIGHT_ROUTES = 'data/flight-routes-dummy.json'
 REACT_APP_DATA_AIRLINES = 'data/airlines.csv'
 REACT_APP_DATA_AIRPORTS = 'data/airports.csv'
-REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/significant_month.geojson'
+//REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/significant_month.geojson'
+REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_month.geojson'
 REACT_APP_DATA_FLIGHT_ROUTES = 'data/routes.csv'
