--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "http-server": "^0.11.1",
-    "lodash.bind": "^4.2.1",
-    "lodash.isundefined": "^3.0.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "redux-mock-store": "^1.5.1"
@@ -60,8 +58,10 @@
     "immutable": "^3.8.2",
     "ionicons": "^4.4.3",
     "jquery": "^3.3.1",
+    "lodash.bind": "^4.2.1",
     "lodash.has": "^4.5.2",
     "lodash.isnan": "^3.0.2",
+    "lodash.isundefined": "^3.0.1",
     "lodash.partial": "^4.2.1",
     "lodash.round": "^4.0.4",
     "lodash.uniqueid": "^4.0.1",
@@ -77,6 +77,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
     "react-url-query": "^1.4.0",
-    "redux": "^4.00"
+    "redux": "^4.00",
+    "viewport-mercator-project": "^5.3.0"
   }
 }
