--- a/package.json
+++ b/package.json
@@ -47,11 +47,8 @@
     "d3-axis": "^1.0.12",
     "d3-brush": "^1.0.6",
     "d3-dsv": "^1.0.10",
-    "d3-ease": "^1.0.5",
     "d3-scale": "^2.1.2",
     "d3-selection": "^1.3.2",
-    "d3-transition": "^1.1.3",
-    "deck.gl": "^6.1.0",
     "detect-browser": "^2.0.0",
     "gh-pages": "^1.2.0",
     "history": "^4.7.2",
@@ -70,14 +67,12 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-map-gl": "^3.3.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
     "react-url-query": "^1.4.0",
-    "redux": "^4.00",
-    "viewport-mercator-project": "^5.3.0"
+    "redux": "^4.00"
   }
 }
