--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/significant_month.geojson'
+//REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/significant_month.geojson'
+REACT_APP_DATA_EARTHQUAKES = 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_month.geojson'
