--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HARMONI",
-  "name": "OPENSENSORWEB HARVESTER MONITOR",
+  "short_name": "PIKOEA",
+  "name": "PIKOBYTES EARTHQUAKE DEMO",
   "icons": [
     {
       "src": "favicon.ico",
