--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lodash.round": "^4.0.4",
     "lodash.uniqueid": "^4.0.1",
     "mapbox-gl": "^0.49.0-beta.1",
+    "mobile-detect": "^1.4.3",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
